--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <div class="container-fluid text-center pb-5">
   <div style="text-align:center">
     <h1>
-      Welcome to {{title}}!
+      <app-card-list></app-card-list>
     </h1>
   </div>
 </div>
