--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,7 +1,4 @@
 <div class="container-fluid text-center pb-5">
-  <div class="row">
-    <app-card class="col-4"></app-card>
-    <app-card class="col-4"></app-card>
-    <app-card class="col-4"></app-card>
-  </div>
+  <app-card class="col-4" *ngFor="let card of cards"></app-card>
+
 </div>
