--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center pb-5">
+<div class="row container-fluid text-center pb-5">
     <app-card class="col-4" *ngFor="let card of cards" [card]="card"></app-card>
 
 </div>
