composant pour entrée de note

--- a/src/app/new-card-input/new-card-input.component.html
+++ b/src/app/new-card-input/new-card-input.component.html
@@ -1,3 +1,5 @@
-<p>
-  new-card-input works!
-</p>
+<div class="card">
+    <div class="card-block">
+        <input placeholder="Take a note ..." class="form-control">
+    </div>
+</div>
