--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,16 @@
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Angular Notes</a>
+    <a class="navbar-brand" href="#">Angular Notes</a>
 </nav>
 <div class="container-fluid text-center pb-5">
-  <div style="text-align:center">
-    <h1>
-      <app-card-list [cards]="cards"></app-card-list>
-    </h1>
-  </div>
+    <div style="text-align:center">
+        <div class="container-fluid text-center pb-5">
+            <div class="row justify-content-end">
+                <app-new-card-input></app-new-card-input>
+            </div>
+        </div>
+        <h1>
+            <app-card-list [cards]="cards"></app-card-list>
+        </h1>
+    </div>
 </div>
