--- a/src/app/new-card-input/new-card-input.component.html
+++ b/src/app/new-card-input/new-card-input.component.html
@@ -1,5 +1,5 @@
 <div class="card">
     <div class="card-block">
-        <input placeholder="Take a note ..." class="form-control">
+        <input placeholder="Take a note ..." class="form-control" [(ngModel)]="newCard.text">
     </div>
 </div>
