--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div style="text-align:center">
         <div class="container-fluid text-center pb-5">
             <div class="row justify-content-end">
-                <app-new-card-input></app-new-card-input>
+                <app-new-card-input (onCardAdd)="addCard($event)"></app-new-card-input>
             </div>
         </div>
         <h1>
